package com.udacity.project4

import android.app.Activity
import android.app.Application
import androidx.test.core.app.ActivityScenario
import androidx.test.core.app.ApplicationProvider.getApplicationContext
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.IdlingRegistry
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.action.ViewActions.longClick
import androidx.test.espresso.action.ViewActions.replaceText
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.RootMatchers.withDecorView
import androidx.test.espresso.matcher.ViewMatchers
import androidx.test.espresso.matcher.ViewMatchers.isDisplayed
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.espresso.matcher.ViewMatchers.withText
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import com.udacity.project4.locationreminders.RemindersActivity
import com.udacity.project4.locationreminders.data.ReminderDataSource
import com.udacity.project4.locationreminders.data.local.LocalDB
import com.udacity.project4.locationreminders.data.local.RemindersLocalRepository
import com.udacity.project4.locationreminders.reminderslist.RemindersListViewModel
import com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel
import com.udacity.project4.util.DataBindingIdlingResource
import com.udacity.project4.util.monitorActivity
import com.udacity.project4.utils.EspressoIdlingResource
import kotlinx.coroutines.runBlocking
import org.hamcrest.Matchers.`is`
import org.hamcrest.Matchers.not
import org.junit.After
import org.junit.Before
import org.junit.Test
import org.junit.runner.RunWith
import org.koin.androidx.viewmodel.dsl.viewModel
import org.koin.core.context.startKoin
import org.koin.core.context.stopKoin
import org.koin.dsl.module
import org.koin.test.AutoCloseKoinTest
import org.koin.test.get


@RunWith(AndroidJUnit4::class)
@LargeTest
//END TO END test to black box test the app
class RemindersActivityTest :
	AutoCloseKoinTest() {// Extended Koin Test - embed autoclose @after method to close Koin after every test

	private lateinit var repository: ReminderDataSource
	private lateinit var appContext: Application
	private val dataBindingIdlingResource = DataBindingIdlingResource()

	/**
	 * As we use Koin as a Service Locator Library to develop our code, we'll also use Koin to test our code.
	 * at this step we will initialize Koin related code to be able to use it in out testing.
	 */
	@Before
	fun init() {
		stopKoin()//stop the original app koin
		appContext = getApplicationContext()
		val myModule = module {
			viewModel {
				RemindersListViewModel(
					appContext,
					get() as ReminderDataSource
				)
			}
			single {
				SaveReminderViewModel(
					appContext,
					get() as ReminderDataSource
				)
			}
			single { RemindersLocalRepository(get()) as ReminderDataSource }
			single { LocalDB.createRemindersDao(appContext) }
		}
		//declare a new koin module
		startKoin {
			modules(listOf(myModule))
		}
		//Get our real repository
		repository = get()

		//clear the data to start fresh
		runBlocking {
			repository.deleteAllReminders()
		}
	}

	@Before
	fun registerIdlingResource() {
		IdlingRegistry.getInstance().register(EspressoIdlingResource.countingIdlingResource)
		IdlingRegistry.getInstance().register(dataBindingIdlingResource)
	}

	@After
	fun unregisterIdlingResource() {
		IdlingRegistry.getInstance().unregister(EspressoIdlingResource.countingIdlingResource)
		IdlingRegistry.getInstance().unregister(dataBindingIdlingResource)
	}

	@Test
	fun test_E2E_addNewReminder() {
		runBlocking {
			val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)
			dataBindingIdlingResource.monitorActivity(activityScenario)

			// First open, confirm there's no data display
			onView(withId(R.id.noDataTextView)).check((matches(isDisplayed())))

			// Click on FAB button to add new reminder
			onView(withId(R.id.addReminderFAB)).perform(click())

			// Click on "Select Location" section
			onView(withId(R.id.selectLocation)).perform(click())

			// On google map view -> long click to drop marker
			onView(withId(R.id.mapView)).perform(longClick())

			// Then press save button.
			onView(withId(R.id.btnSave)).perform(click())

			// Fill missing parameters
			onView(withId(R.id.reminderTitle)).perform(replaceText("Title"))
			onView(withId(R.id.reminderDescription)).perform(replaceText("Description"))

			// Press save reminder button
			onView(withId(R.id.saveReminder)).perform(click())

			//Verify `Toast` message is show with message `Reminder Saved !`
			onView(withText(R.string.reminder_saved)).inRoot(withDecorView(not(`is`(getActivity(activityScenario)?.window?.decorView)))).check(matches(isDisplayed()))

			// Verify recycler view is displayed
			onView(withId(R.id.reminderssRecyclerView)).check(matches(isDisplayed()))
			activityScenario.close()
		}
	}

	@Test
	fun test_whenTitleNotEnter_SnackBarMustBeShow() {
		runBlocking {
			val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)
			dataBindingIdlingResource.monitorActivity(activityScenario)

			onView(withId(R.id.addReminderFAB)).perform(click())
			onView(withId(R.id.saveReminder)).perform(click())

			onView(withId(com.google.android.material.R.id.snackbar_text)).check(matches(ViewMatchers.withText(R.string.err_enter_title)))

			activityScenario.close()
		}
	}

	private fun getActivity(activityScenario: ActivityScenario<RemindersActivity>): Activity? {
		var activity: Activity? = null
		activityScenario.onActivity {
			activity = it
		}
		return activity
	}
}
